# xcompress

./: .gitignore  .travis.yml  Cargo.toml  Makefile  README.md
.github/workflows/: ci-version.yml  ci.yml
src/: archive_format.rs  cli.rs  lib.rs  main.rs
src/commands/: compression.rs  decompression.rs  mod.rs
