[package]
name = "xcompress"
version = "0.10.10"
authors = ["Magic Len <len@magiclen.org>"]
edition = "2018"
repository = "https://github.com/magiclen/xcompress"
homepage = "https://magiclen.org/xcompress"
keywords = ["compression", "decompression", "zip", "archive", "tar"]
categories = ["command-line-utilities"]
description= "XCompress is a free file archiver utility on Linux, providing multi-format archiving to and extracting from ZIP, Z, GZIP, BZIP2, LZ, XZ, LZMA, 7ZIP, TAR, RAR and ZSTD."
readme = "README.md"
license = "MIT"

[badges.travis-ci]
repository = "magiclen/xcompress"
branch = "master"

[profile.release]
panic = "abort"

[dependencies]
subprocess = "0.2"
num_cpus = "1.8.0"
terminal_size = "0.1"
clap = "2.32.0"
byte-unit = "3"
path-absolutize = "1.1.1"