[package]
name = "xcompress"
version = "0.11.1"
authors = ["Magic Len <len@magiclen.org>"]
edition = "2018"
repository = "https://github.com/magiclen/xcompress"
homepage = "https://magiclen.org/xcompress"
keywords = ["compression", "decompression", "zip", "archive", "tar"]
categories = ["command-line-utilities"]
description= "XCompress is a free file archiver utility on Linux, providing multi-format archiving to and extracting from ZIP, Z, GZIP, BZIP2, LZ, XZ, LZMA, 7ZIP, TAR, RAR and ZSTD."
readme = "README.md"
license = "MIT"

[badges.travis-ci]
repository = "magiclen/xcompress"
branch = "master"

[profile.release]
panic = "abort"

[dependencies]
clap = "2.33.1"
concat-with = "0.2"
terminal_size = "0.1"

execute = "0.2.4"
num_cpus = "1.8.0"
byte-unit = "3"
scanner-rust = "2.0.9"

[dependencies.path-absolutize]
version = "3"
features = ["lazy_static_cache"]