[package]
name = "xcompress"
version = "0.12.3"
authors = ["Magic Len <len@magiclen.org>"]
edition = "2021"
rust-version = "1.70"
repository = "https://github.com/magiclen/xcompress"
homepage = "https://magiclen.org/xcompress"
keywords = ["compression", "decompression", "zip", "archive", "tar"]
categories = ["command-line-utilities"]
description = "XCompress is a free file archiver utility on Linux, providing multi-format archiving to and extracting from ZIP, Z, GZIP, BZIP2, LZ, XZ, LZMA, 7ZIP, TAR, RAR and ZSTD."
license = "MIT"
include = ["src/**/*", "Cargo.toml", "README.md", "LICENSE"]

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true

[dependencies]
clap = { version = "4", features = ["derive"] }
concat-with = "0.2"
terminal_size = "0.3"

anyhow = "1"

execute = "0.2"
num_cpus = "1"
scanner-rust = "2"

[dependencies.path-absolutize]
version = "3"
features = ["once_cell_cache"]

[dependencies.byte-unit]
version = "4"
features = ["std"]
default-features = false
